# widget

./: .gitignore  conftest.py  pyproject.toml  utils.py
src/: prowerka.py  reports.py  services.py  utils.py  views.py
tests/: test_main.py  test_reports.py  test_services.py  test_utils.py  test_views.py
